# stocks

./: .env.example  .gitignore  58416417_appkey_mock.txt.example  58416417_secretkey_mock.txt.example  README.md  pyproject.toml
.bkit/audit/: 2026-04-21.jsonl  2026-04-22.jsonl  2026-04-23.jsonl  orders.jsonl
.bkit/state/: last_extract_status.json  pdca-status.json
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/repositories/: __init__.py  batch_repository.py  (+2 more)
batch/runtime_source/: run.py  scheduler.py
batch/scripts/: bench_async_client.py  refresh_nxt_tickers.py
docs/: API_SPEC.md  ARCHITECTURE.md  AUTO_TRADE_OPERATION.md  BATCH_SPEC.md  CLOSING_BET_PRINCIPLES.md  kiwoom-direct-api-findings-2026-04-16.md  kiwoom-direct-api-reconciliation-plan.md  strategy-audit-2026-04.md  trade-history-pnl-reconciliation-plan.md
docs/03-analysis/: nxt-closing-bet-v2.analysis.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.js  vite.config.ts
frontend/src/: main.tsx
scripts/daemon/: README.md  install-scheduler-nssm.ps1  install-scheduler-taskscheduler.ps1  stocks-scheduler.service
scripts/migrations/: 20260423_execution_history.sql  20260423_missing_tables.sql
tests/: test_candidate_selection.py  test_closing_bet_service.py  test_dashboard_service.py  test_decision_policy.py  test_kiwoom_order_prices.py  test_llm_model_defaults.py  test_overall_ai_target_selection.py  test_runner_sell.py  test_sell_schedule.py
(+113 files in other folders)
