[project]
name = "stocks-new"
version = "0.1.0"
description = "종가배팅 시스템 재구축 프로젝트"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "python-dotenv>=1.0.1",
  "psycopg[binary]>=3.2.0",
  "psycopg-pool>=3.2.4",
  "pydantic>=2.11.0",
  "orjson>=3.10.0"
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 5056
